gcc/testsuite/rust.test/xfail_compile/invalid_main_type.rs
fn main() { // { dg-error "expected .... got .<integer>." }
    8
}
